style/blocks/_columns.scss
.wp-block-columns {
	margin-bottom: 0;
	
	figure {
		margin: 0;
	}
	
	.wp-block-separator {
		margin-left: 0;
	}
	
	.wp-block-group & {
		padding-top: 30px;
		padding-bottom: 30px;
	}

	.wp-block-columns &,
	.wp-block-media-text & {
		padding-top: 0;
		padding-bottom: 0;
	}
	
	.wp-block-column {
		margin-bottom: 0;
	}

	.wp-block-column:nth-of-type(2) {
		margin-bottom: 0;

		h2 {
			margin-top: 0;
		}
	}

	.wp-block-gallery {
		margin: 0;
	}

	@media screen and (min-width: 600px) {
		
		&.is-style-split,
		&.is-style-split-inverted {

			.wp-block-column {
				padding: 0;
			}
	
			.wp-block-column:first-of-type {
				margin-right: 0;
			}
		}
		
		&.is-style-split {
			
			.wp-block-column:last-of-type {
				padding-left: 4%;
			}
		}

		&.is-style-split-inverted {

			.wp-block-column:first-of-type {
				order: 1;
			}

			.wp-block-column:last-of-type {
				order: 0;
				padding-right: 4%;
			}
		}
		
		&.is-style-shrink-first,
		&.is-style-shrink-last {

			.wp-block-column {
				flex-basis: 49%;

				&.wp-block-column:nth-child(2n){
					margin-left: 2%;
				}
			}
		}
	}

	@media screen and (min-width: breakpoint('tablet-landscape')) {
		
		&.is-style-split {

			.wp-block-column:last-of-type {
				padding-left: 8.5%;
			}
		}

		&.is-style-split-inverted {

			.wp-block-column:last-of-type {
				padding-right: 8.5%;
			}
		}

		&.is-style-shrink-first {
			
			.wp-block-column:first-of-type {
				flex-basis: 32%;
			}
			
			.wp-block-column:last-of-type {
				flex-grow: 1;
			}
		}

		&.is-style-shrink-last {
			
			.wp-block-column:last-of-type {
				flex-basis: 32%;
			}
			
			.wp-block-column:first-of-type {
				flex-grow: 1;
			}
		}
	}
}

@media screen and (min-width: 600px) {

	@for $i from 2 through 6 {

		.has-#{$i}-columns {
			$columns-gap: 2;

			> .wp-block-column {
				$column-width: (100 - ($columns-gap * ($i - 1))) / $i;
				flex-basis: $column-width * 1%;
				margin-right: $columns-gap * 1%;
				margin-left: 0;

				&:nth-of-type(#{$i}n + #{$i}) {
					margin-right: 0;
				}
			}
		}
	}
}

